deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-talent-plus
spec:
  selector:
    matchLabels:
      app: k8s-talent-plus
  template:
    metadata:
      labels:
        app: k8s-talent-plus
    spec:
      containers:
      - name: k8s-talent-plus
        image: mudashir/k8s-talent-plus
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 3000
