ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-talent-plus
spec:
  defaultBackend:
    service:
      name: talent-plus-backend
      port:
        number: 80
